<resources>
    <string name="app_name">NMEA Navigation Simulator</string>
    <string name="toolbar_subtitle">NMEA to N2K / SeaTalk test source</string>
    <string name="ip_address">IP address</string>
    <string name="port">Port</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="start_simulation">Start simulation</string>
    <string name="stop_simulation">Stop simulation</string>
    <string name="simulator_controls">Simulator controls</string>
    <string name="speed_knots">Speed range (knots)</string>
    <string name="update_rate_hz">Update rate (Hz)</string>
    <string name="course_deviation">Injected course deviation (NM)</string>
    <string name="rudder_angle">Rudder angle (°)</string>
    <string name="rsa_status_invalid">RSA status V</string>
    <string name="mwv_status_invalid">MWV status V</string>
    <string name="mute_nmea_tx">Mute NMEA TX</string>
    <string name="magnetic_variation">Magnetic variation (°E, west is negative)</string>
    <string name="gps_fix_invalid">GPS loss (RMC V / GGA 0)</string>
    <string name="depth_fields_blank">Depth invalid (blank DBT/DPT)</string>
    <string name="vessel_controls">Vessel</string>
    <string name="wind_controls">Wind</string>
    <string name="water_controls">Depth and temperature</string>
    <string name="current_controls">Current</string>
    <string name="ais_controls">AIS</string>
    <string name="emit_ais">Emit AIS</string>
    <string name="emit_aivdo">Emit AIVDO own-ship</string>
    <string name="wind_direction_true">Wind direction range (°T)</string>
    <string name="wind_speed_knots">Wind speed range (knots)</string>
    <string name="depth_meters">Depth range (m)</string>
    <string name="water_temperature_celsius">Water temperature range (°C)</string>
    <string name="current_direction_true">Current direction range (°T)</string>
    <string name="current_speed_knots">Current speed range (knots)</string>
    <string name="track_visualization">Track visualization</string>
    <string name="live_navigation">Live navigation</string>
    <string name="connection_log">Connection log</string>
</resources>
